.k8s/overlays/prod/patch-deployment-project_copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project
  namespace: nicoleliu
spec:
  template:
    spec:
      containers:
      - name: project
        image: w255mids.azurecr.io/nicoleliu/project:[TAG]
